<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Gas_Injection" Id="{56f1dcb4-685b-4cb8-b345-c0256483ed80}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL

{attribute 'pytmc' := '
	pv: PLC:QRIXS:VAC:OVRDON
	io: io
'}
xSystemOverrideMode	: BOOL := FALSE; (* Global system override for the DREAM Vacuum System*)
	
////// NOZZLE CHAMBER DEVICES
/// GUAGES 
{attribute 'pytmc' := ' pv: DREAM:NC:GPI:01 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[EL3174-0002_01_06]^AI Standard Channel 1^Value'}
DREAM_NC_GPI_01 : FB_MKS275;

{attribute 'TcLinkTo' := 	'    .i_iPRESS_R		:=	TIIB[EL3174-0002_01_05]^AI Standard Channel 1^Value;
								 .i_xHV_ON			:=	TIIB[EL1124_01_08]^Channel 1^Input;
								 .i_xDisc_Active	:=	TIIB[EL1124_01_08]^Channel 2^Input;
								 .q_xHV_DIS			:=	TIIB[EL2624_01_03]^Channel 3^Output
	'}	
{attribute 'pytmc' := '
		pv: DREAM:NC:GCC:01 '}
DREAM_NC_GCC_01: FB_MKS500;

///TURBO PUMPS
{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[EL1004_01_13]^Channel 1^Input;
							 .i_xFaultNC		:=	TIIB[EL1004_01_13]^Channel 3^Input;
							 .i_xRemote         :=  TIIB[EL1004_01_13]^Channel 2^Input;
							 .q_RunDO			:=	TIIB[EL2004_01_14]^Channel 1^Output;
							 .q_PumpingStation  :=	TIIB[EL2004_01_14]^Channel 3^Output;   
							 .q_xRemote	        :=	TIIB[EL2004_01_14]^Channel 2^Output			 
'}
{attribute 'pytmc' := '
		pv: DREAM:NC:PTM:01
		io: io
'}
DREAM_NC_PTM_01 : FB_PTM_Pfeiffer;

{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[EL1004_01_16]^Channel 1^Input;
							 .i_xFaultNC		:=	TIIB[EL1004_01_16]^Channel 3^Input;
							 .i_xRemote         :=  TIIB[EL1004_01_16]^Channel 2^Input;
							 .q_RunDO			:=	TIIB[EL2004_01_17]^Channel 1^Output;
							 .q_PumpingStation  :=	TIIB[EL2004_01_17]^Channel 3^Output;   
							 .q_xRemote	        :=	TIIB[EL2004_01_17]^Channel 2^Output			 
'}
{attribute 'pytmc' := '
		pv: DREAM:NC:PTM:02
		io: io
'}
DREAM_NC_PTM_02 : FB_PTM_Pfeiffer;

///// DP1 
///TURBO PUMP
{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[EL1004_01_19]^Channel 1^Input;
							 .i_xFaultNC		:=	TIIB[EL1004_01_19]^Channel 3^Input;
							 .i_xRemote         :=  TIIB[EL1004_01_19]^Channel 2^Input;
							 .q_RunDO			:=	TIIB[EL2004_01_20]^Channel 1^Output;
							 .q_PumpingStation  :=	TIIB[EL2004_01_20]^Channel 3^Output;   
							 .q_xRemote	        :=	TIIB[EL2004_01_20]^Channel 2^Output								 
'}
{attribute 'pytmc' := '
		pv: DREAM:DP1:PTM:01
		io: io
'}
DREAM_DP1_PTM_01 : FB_PTM_Pfeiffer;

//// GUAGES 
{attribute 'TcLinkTo' := 	'    .i_iPRESS_R		:=	TIIB[EL3174-0002_01_05]^AI Standard Channel 2^Value;
								 .i_xHV_ON			:=	TIIB[EL1124_01_08]^Channel 3^Input;
								 .i_xDisc_Active	:=	TIIB[EL1124_01_08]^Channel 4^Input;
								 .q_xHV_DIS			:=	TIIB[EL2624_01_033]^Channel 2^Output
	'}	
{attribute 'pytmc' := '
		pv: DREAM:DP1:GCC:01 '}
DREAM_DP1_GCC_01: FB_MKS500;

{attribute 'pytmc' := ' pv: DREAM:DP1:GPI:01 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[EL3174-0002_01_06]^AI Standard Channel 2^Value'}
DREAM_DP1_GPI_01 : FB_MKS275;

//// VALVES 
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[EL1004_01_10]^Channel 3^Input;
							 .i_xClsLS	:=	TIIB[EL1004_01_10]^Channel 4^Input;
							 .q_xOPN_DO	:=	TIIB[EL2004_01_11]^Channel 2^Output
	'}
{attribute 'pytmc' := '
		pv: DREAM:DP1:VRC:01
		io: io
	'}
DREAM_DP1_VRC_01: FB_VRC;

{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[EL1004_01_10]^Channel 1^Input;
							 .i_xClsLS	:=	TIIB[EL1004_01_10]^Channel 2^Input;
							 .q_xOPN_DO	:=	TIIB[EL2004_01_11]^Channel 1^Output
	'}
{attribute 'pytmc' := '
		pv: DREAM:DP1:VRC:02
		io: io
	'}
DREAM_DP1_VRC_02: FB_VRC;

////// DP2
//TURBO PUMP 
{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[EL1004_00_05]^Channel 2^Input;
							 .i_xFaultNC		:=	TIIB[EL1004_00_05]^Channel 1^Input;
							 .q_RunDO			:=	TIIB[EL2794_00_08]^Channel 1^Output							 			 
'}
{attribute 'pytmc' := '
		pv: DREAM:DP2:PTM:01
		io: io
'}
DREAM_DP2_PTM_01 : FB_PTM_TurboDrive;

(*
{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[EL1004_01_16]^Channel 2^Input;
							 .i_xFaultNC		:=	TIIB[EL1004_01_16]^Channel 1^Input;
							 .q_RunDO			:=	TIIB[EL2794_01_15]^Channel 1^Output;	
							 .q_xReset			:=	TIIB[EL2794_01_15]^Channel 2^Output			 
'}
{attribute 'pytmc' := '
		pv: DREAM:DP2:GHC:01
		io: io
'}
DREAM_DP2_GHC_01 : FB_;
*)

////DP3 
///TURBO DRIVE
{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[EL1004_00_05]^Channel 3^Input;
							 .i_xFaultNC		:=	TIIB[EL1004_00_05]^Channel 4^Input;
							 .q_RunDO			:=	TIIB[EL2794_00_08]^Channel 3^Output							 			 
'}
{attribute 'pytmc' := '
		pv: DREAM:DP3:PTM:01
		io: io
'}
DREAM_DP3_PTM_01 : FB_PTM_TurboDrive;


END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>